--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,8 +5,12 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "slitherbox"
 version = "0.0.1"
-author = "joshiemoore"
-author_email = "jxm5210@g.rit.edu"
+authors = [
+  { name="joshiemoore", email="jxm5210@g.rit.edu" }
+]
 description = "A drop-in pure-Python replacement for common shell utilities"
 readme = "README.md"
 license = { file="LICENSE.txt" }
+
+[project.urls]
+"Homepage" = "https://github.com/joshiemoore/slitherbox"
